# hvacquotepro

./: .env  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env  DEV.md  Dockerfile  alembic.ini  check_db.py  check_no_func_now.py  pyproject.toml  restart_dev.ps1  run_dev.ps1  run_smoke.py  run_smoke_isolated.ps1  scripts_seed_admin.py  scripts_seed_smoke_data.py  smoke_timekeeping.py  smoke_timekeeping_stop.py  stop_dev.ps1
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  f1047f0760af_timekeeping_mvp.py  fe9be68fb91e_add_segment_type_to_tk_crew_work_.py
backend/app/: config.py  db.py  deps.py  i18n.py  main.py  security.py
backend/app/models/: core.py  crm.py  quoting.py
backend/app/routers/: admin.py  auth.py  crm.py  quoting.py
backend/app/schemas/: auth.py  common.py  crm.py  quoting.py
backend/app/scripts/: bootstrap_admin.py
backend/app/seeds/: seed_dev.py
backend/app/services/: pricing.py  rules.py  validation.py
backend/app/timekeeping/: api.py  api.py.bak_20260121_090624  models.py  schemas.py
backend/hvacquotepro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: check_seed.py
backend/tests/: _helpers.py  conftest.py  test_auth_http.py  test_autotravel_http.py  test_reports_csv_http.py  test_reports_http.py  test_reports_range_http.py  test_smoke_isolated.py  test_timekeeping_http.py
deploy/: NGINX.md
